fix: contraste de letras en inputs con dark mode

--- a/src/app/pages/task-create/task-create.page.scss
+++ b/src/app/pages/task-create/task-create.page.scss
@@ -18,7 +18,7 @@ ion-textarea {
 
 .dark ion-input,
 .dark ion-textarea {
-  --color: #ffffff;
+  --color: #e31010;
   --placeholder-color: #9ca3af;
 }
 
